feat: window close

--- a/.vindrc
+++ b/.vindrc
@@ -41,5 +41,7 @@ gnmap <Shift-Alt> <easyclick><click_left>
 
 " window switch
 map <Tab> <switch_window><easyclick><click_left>
+map <Ctrl-W> <close_current_window>
+" map <Shift-Tab> <exchange_window_with_nearest>
 " map <Tab-h> <switch_window><select_left_window>
 " map <Tab-l> <switch_window><select_right_window>
