--- a/.vindrc
+++ b/.vindrc
@@ -18,7 +18,7 @@ set autotrack_popup = true
 set uiacachebuild = true
 
 " shell
-set shell = wt
+set shell = pwsh
 set shellcmdflag = 
 
 " mode switch
@@ -45,3 +45,9 @@ map <Ctrl-W> <close_current_window>
 " map <Shift-Tab> <exchange_window_with_nearest>
 " map <Tab-h> <switch_window><select_left_window>
 " map <Tab-l> <switch_window><select_right_window>
+
+" tabs
+map O <open_new_tab>
+map <Ctrl-w> <close_current_tab>
+map gt <switch_to_right_tab>
+map gT <switch_to left_tab>
